--- a/application/admin/view/blog/index.html
+++ b/application/admin/view/blog/index.html
@@ -1,6 +1,6 @@
 {extend name="public:base"/}
 
-{block name="title"}管理游记{/block}
+{block name="title"}管理BLOG{/block}
 
 {block name="tab"}manage_blog{/block}
 {block name="header"}
@@ -34,7 +34,7 @@
 {/block}
 {block name="content"}
 <div class="content">
-    <ol class="breadcrumb"><li>管理游记</li></ol>
+    <ol class="breadcrumb"><li>管理BLOG</li></ol>
     <label class="text-info">当前一共有<strong>{$blogs|count}</strong>条游记 </label>
     <span class="text-info pull-right"><a href="/admin/blog/create">新建</a></span>
     <table class="table table-hover">
