--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -32,7 +32,6 @@
 
         $(function(){
             $("#{block name="tab"}{/block}").addClass("active");
-            $("#{block name="tab"}{/block}").children("a").attr("href", "#");
         });
     </script>
     {block name="header"}{/block}
@@ -62,8 +61,8 @@
                 </ul>
 
                 <ul class="nav nav-sidebar">
-                    <li id="manage_blog"><a href="/admin/blog/index">管理游记</a></li>
-                    <li id="new_blog"><a href="/admin/blog/create">新游记</a></li>
+                    <li id="manage_blog"><a href="/admin/blog/index">管理BLOG</a></li>
+                    <li id="new_blog"><a href="/admin/blog/create">新BLOG</a></li>
                 </ul>
 
                 <ul class="nav nav-sidebar">
