--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -12,11 +12,12 @@
         <h2>关于我们</h2>
         <div class="about-top-sec">
             <h3>我们是谁</h3>
-            <h4>我们创建于2008/1/10: 年轻的脚步永不停息，再不疯狂就老了，二货们，赶紧加入徒步天涯户外俱乐部，开启你不归的逗逼之路，我们的原则是：不抛弃，不放弃，不强留；让我们带你花最少的钱，看最美的风景……</h4>
+            <h4>我们创建于2008/1/10， 年轻的脚步永不停息，再不疯狂就老了，二货们，赶紧加入徒步天涯户外俱乐部，开启你不归的逗逼之路，我们的原则是：不抛弃，不放弃，不强留。让我们带你花最少的钱，看最美的风景……</h4>
             <p></p>
         </div>
         <div class="about-grids">
-            <div class="col-md-6 about-list">
+            <div class="row">
+            <div class="col-sm-6 about-list">
                 <h4>我们提供</h4>
                 <br/>
                 <ul>
@@ -26,8 +27,9 @@
                     <li><a href="#">团队建设活动定制</a></li>
                 </ul>
             </div>
-            <div class="col-md-6 about-pic">
+            <div class="col-sm-6 about-pic">
                 <img src="/static/images/abt.jpg" class="img-responsive" alt=""/>
+            </div>
             </div>
             <div class="clearfix"></div>
         </div>
