no idea what changed

--- a/application/index/view/blog/index.html
+++ b/application/index/view/blog/index.html
@@ -2,7 +2,7 @@
 
 {block name="title"}BLOG{/block}
 
-{block name="tab"}page_blog{/block}
+{block name="tab"}blog{/block}
 
 {block name="header"}
 {/block}
