--- a/application/index/view/blog/view.html
+++ b/application/index/view/blog/view.html
@@ -2,7 +2,7 @@
 
 {block name="title"}{$blog.caption}{/block}
 
-{block name="tab"}page_blog{/block}
+{block name="tab"}blog{/block}
 
 {block name="header"}
 {/block}
