--- a/application/admin/view/blog/create.html
+++ b/application/admin/view/blog/create.html
@@ -46,7 +46,7 @@
                         switch (data.result) {
                             case 0:
                                 showMessage("保存成功", 0);
-                                $("#activity_id").val(data.id);
+                                $("#blog_id").val(data.id);
                                 break;
                             case -1:
                                 showMessage("保存失败", 1);
