--- a/application/admin/view/activity/edit.html
+++ b/application/admin/view/activity/edit.html
@@ -54,7 +54,7 @@
                                 $("#activity_id").val(data.id);
                                 break;
                             case -1:
-                                showMessage("保存失败", 1);
+                                showMessage(data.message, 1);
                                 break;
                         }
                     },
