--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -68,6 +68,10 @@
                 <ul class="nav nav-sidebar">
                     <li id="manage_message"><a href="/admin/message/index">查看消息</a></li>
                 </ul>
+
+                <ul class="nav nav-sidebar">
+                    <li id="reset_password"><a href="/admin/auth/setpassword">重置密码</a></li>
+                </ul>
             </div>
 
             <div class="col-xs-9 col-xs-offset-3 col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
