--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -31,44 +31,56 @@
             <h1 class="activity-caption">{$activity.caption}</h1>
             <br/>
             <div class="activity-details">
-                <table>
-                    <tr>
-                        <td><label>活动地点：</label></td>
-                        <td>{$activity.location}</td>
-                        <td><label>难度指数：</label></td>
-                        <td><?php echo str_repeat("★", $activity->difficulty);?></td>
-                    </tr>
-                    <tr>
-                        <td><label>集合地点：</label></td>
-                        <td>{$activity.gather_location}</td>
-                        <td><label>强度指数：</label></td>
-                        <td><?php echo str_repeat("★", $activity->strength);?></td>
-                    </tr>
-                    <tr>
-                        <td><label>活动领队：</label></td>
-                        <td>{$activity.leaders}</td>
-                        <td><label>危险指数：</label></td>
-                        <td><?php echo str_repeat("★", $activity->danger);?></td>
-                    </tr>
-                    <tr>
-                        <td><label>住宿方式：</label></td>
-                        <td>{$activity.sleep_style}</td>
-                        <td><label>风景指数：</label></td>
-                        <td><?php echo str_repeat("★", $activity->view);?></td>
-                    </tr>
-                    <tr>
-                        <td><label>开始时间：</label></td>
-                        <td>{$activity.start|date="n月j号",###}</td>
-                    </tr>
-                    <tr>
-                        <td><label>结束时间：</label></td>
-                        <td>{$activity.end|date="n月j号",###}</td>
-                    </tr>
-                    <tr>
-                        <td><label>价格：</label></td>
-                        <td>￥{$activity.price}</td>
-                    </tr>
-                </table>
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="activity-attr">
+                            <label>活动地点：</label>
+                            <span>{$activity.location}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>集合地点：</label>
+                            <span>{$activity.gather_location}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>住宿方式：</label>
+                            <span>{$activity.sleep_style}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>价格：</label>
+                            <span>{$activity.price}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>活动领队：</label>
+                            <span>{$activity.leaders}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>开始时间：</label>
+                            <span>{$activity.start|date="n月j号",###}</span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>结束时间：</label>
+                            <span>{$activity.end|date="n月j号",###}</span>
+                        </div>
+                    </div>
+                    <div class="col-sm-5">
+                        <div class="activity-attr">
+                            <label>难度指数：</label>
+                            <span><?php echo str_repeat("★", $activity->difficulty);?></span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>强度指数：</label>
+                            <span><?php echo str_repeat("★", $activity->strength);?></span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>危险指数：</label>
+                            <span><?php echo str_repeat("★", $activity->danger);?></span>
+                        </div>
+                        <div class="activity-attr">
+                            <label>风景指数：</label>
+                            <span><?php echo str_repeat("★", $activity->view);?></span>
+                        </div>
+                    </div>
+                </div>
                 <br/>
                 <button class="btn btn-primary" id="order-now" data-toggle="modal" data-target="#order-now-dialog">现在报名</button>
             </div>
