add yiwang profile adjust contact page to let user can add him as contacter directly by click the link

--- a/application/index/view/about/index.html
+++ b/application/index/view/about/index.html
@@ -38,7 +38,7 @@
         <h4>您可以通过关注公众号以及加入QQ群的方式加入到我们</h4>
             <div class="row">
                 <div class="col-xs-6 mobile-media">
-                    <h4>加入QQ群 53446033</h4>
+                    <h4> <a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=849ccbb20ebe40eeff22c8590609851670c46f1b7db8648412f0353b1df13aab">加入QQ群 53446033</a></h4>
                     <div class="text-center">
                         <img src="/static/images/qq.png"/>
                     </div>
