--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -46,7 +46,7 @@
                             <span>{$activity.sleep_style}</span>
                         </div>
                         <div class="activity-attr">
-                            <label>价格：</label>
+                            <label>活动费用：</label>
                             <span>{$activity.price}</span>
                         </div>
                         <div class="activity-attr">
