--- a/application/index/view/contact/index.html
+++ b/application/index/view/contact/index.html
@@ -123,7 +123,7 @@
             <div class="col-md-4 footer-left">
                 <div class="f-1">
                     <span class="glyphicon3 glyphicon-earphone" aria-hidden="true"></span>
-                    <p>+1 234 567 9871</p>
+                    <p>13816772463</p>
                 </div>
                 <div class="f-1">
                     <a href="#"><span class="glyphicon3 glyphicon-envelope" aria-hidden="true"></span></a>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="f-1">
                     <a href="#"><span class="icon fa fa-qq faicon3" aria-hidden="true"></span></a>
-                    <p>545753161</p>
+                    <p><a href="tencent://AddContact/?fromId=50&fromSubId=1&subcmd=all&uin=545753161">545753161</a></p>
                 </div>
                 <div class="f-1">
                     <a href="#"><span class="icon fa fa-wechat faicon3" aria-hidden="true"></span></a>
