--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -95,7 +95,10 @@
                              <img src="/static/images/yiwang.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">                                
-                                <p><span>"</span>山大王说他很帅，随便从相册里面找一张就好了，我就从相册里面随便找了一张作为他的头像，我觉得看手机这张很diao，哦，他并有什么介绍，他急着跟别人撸串抛下我就跑了，我现在很凌乱。<span>"</span>
+                                <p>
+                                    <span>"</span>
+                                    这一生，需要走很多地方，遇见很多风景，错过一些人，才明白，无论去什么地方，遇见什么人，能让你觉得安心舒适的那个，才是最重要。如果你很喜欢一个人，准备和她/他一起面对未来的风风雨雨，不妨先来一场户外旅行吧。在路上，你会看到一个不一样的她/他。旅行，是考验，也是增进感情的方式。在异地他乡，邂逅不同的风景，路遇各种突发状况，既锻炼胆识，也增强自我的意志力，让彼此有一个更深的认识。看古镇小桥，看荒野人家，看山水绿林，在路上，邂逅自己，重遇那个心心念念的她/他。喜欢她/他，就带她/他跟着我们去徒步天涯吧。
+                                    <span>"</span>
                                 </p>
                                 <h5>遗忘</h5>
                                 <h6>山大王</h6>
@@ -109,7 +112,9 @@
                              <img src="/static/images/soap.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                                <p><span>"</span> 放下手机，背起背包，穿行在风中，让自己置身于大自然的怀抱，享受那最原始的风景；清空脑海里中的纷繁，远离喧嚣浮躁的城市，隐没于绵绵群山，给自己一分久违的安静，让心灵有个短暂的休憩。<span>"</span>
+                                <p>
+                                    <span>"</span>放下手机，背起背包，穿行在风中，让自己置身于大自然的怀抱，享受那最原始的风景；清空脑海里中的纷繁，远离喧嚣浮躁的城市，隐没于绵绵群山，给自己一分久违的安静，让心灵有个短暂的休憩。
+                                    <span>"</span>
                                 </p>
                                 <h5>寒冰</h5>
                                 <h6>领队</h6>
@@ -123,7 +128,9 @@
                              <img src="/static/images/dapang.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                             <p><span>"</span>妹子  要看手相吗？（看得出大胖是个情商很低的流氓，在这里肆无忌惮的招揽生意，我相信有稍微有点智商的人都不会上当，我真的没有在说你犀牛。）<span>"</span>
+                             <p>
+                                 <span>"</span>妹子  要看手相吗？（看得出大胖是个情商很低的流氓，在这里肆无忌惮的招揽生意，我相信有稍微有点智商的人都不会上当，我真的没有在说你犀牛。）
+                                 <span>"</span>
                              </p>
                              <h5>大胖</h5>
                              <h6>领队</h6>
@@ -137,7 +144,9 @@
                              <img src="/static/images/apple.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                             <p><span>"</span> 喜欢徒步的人 不一定爱上的都是风景， 有时徒步是一种感情的释放和发泄，有人说，不爱徒步的人就是不解风情的人。其实，人爱上的不是单一的徒步，而是背起背包，将心事一点点丢失在路途中。<span>"</span>
+                             <p>
+                                 <span>"</span>喜欢徒步的人 不一定爱上的都是风景， 有时徒步是一种感情的释放和发泄，有人说，不爱徒步的人就是不解风情的人。其实，人爱上的不是单一的徒步，而是背起背包，将心事一点点丢失在路途中。
+                                 <span>"</span>
                              </p>
                              <h5>Apple</h5>
                              <h6>领队</h6>
@@ -151,7 +160,9 @@
                              <img src="/static/images/guoke.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">                                
-                                <p><span>"</span> 我没有什么文化，当九五二七让我把我对户外的一些感想告诉他的时候，我说让他随便抄一段，但是他并不是那么随便的人，所以他就没有抄，这是他的原创。他就是这么一个助人为乐的BOY。<span>"</span>
+                                <p>
+                                    <span>"</span>我没有什么文化，当九五二七让我把我对户外的一些感想告诉他的时候，我说让他随便抄一段，但是他并不是那么随便的人，所以他就没有抄，这是他的原创。他就是这么一个助人为乐的BOY。
+                                    <span>"</span>
                                 </p>
                                 <h5>过客</h5>
                                 <h6>领队</h6>
@@ -165,7 +176,9 @@
                              <img src="/static/images/9527.jpg" alt="" />
                          </div>
                          <div class="testimonial-right">
-                             <p><span>"</span>过客没有什么文化，当我让他把他对户外的一些感想告诉我的时候，他说让我随便抄一段，但是我并不是那么随便的人，所以我就没有抄，这是原创。不用感谢我，我就是这么一个助人为乐的BOY。<span>"</span>
+                             <p>
+                                 <span>"</span>过客没有什么文化，当我让他把他对户外的一些感想告诉我的时候，他说让我随便抄一段，但是我并不是那么随便的人，所以我就没有抄，这是原创。不用感谢我，我就是这么一个助人为乐的BOY。
+                                 <span>"</span>
                              </p>
                              <h5>九五二七</h5>
                              <h6>领队</h6>
