when click QQ group number , user can join the QQ group directluy

--- a/application/index/view/activity/view.html
+++ b/application/index/view/activity/view.html
@@ -93,7 +93,7 @@
         <aside class="col-md-4 activity-aside">
             <div class="widget">
                 <h4 class="title">社区</h4>
-                <p>QQ群：53446033</p>
+                <p><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=849ccbb20ebe40eeff22c8590609851670c46f1b7db8648412f0353b1df13aab">QQ群: 53446033</a></p>
             </div>
 
             <div class="widget">
