add beian number to index page

--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -66,6 +66,7 @@
 <div class="copywrite">
     <div class="container">
         <p>Copyright &copy; 2017.徒步天涯户外俱乐部.<a target="_blank" href="http://www.cssmoban.com/"></a></p>
+        <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备17020246号</a></p>
     </div>
 </div>
 
