modify index.html add new charm 'professional'

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -50,8 +50,8 @@
              </div>
              <div class="col-md-4 choos-grid">
                  <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
-                 <h4>便宜</h4>
-                 <p>对，还有价格谁比我们低，你告诉遗忘，“老大，真的不能再降价了啊！（我也不知道为什么到这里话风变成了这样）”。</p>
+                 <h4>专业</h4>
+                 <p>在这里你可以学到丰富的户外知识以及装备的搭配技巧，当然还有多种多样的户外玩法，是的，从天上到水里都留下过我们的脚步。</p>
              </div>
              <div class="clearfix"></div>
          </div>
