--- a/application/index/view/public/base.html
+++ b/application/index/view/public/base.html
@@ -49,7 +49,7 @@
                         <li id="nav_blog"><a href="/index/blog">BLOG</a></li>
                         <li id="nav_about"><a href="/index/about">关于</a></li>
                         <li id="nav_contact"><a href="/index/contact">联系我们</a></li>
-                        <li id="nav_taobao"><a href="https://shop100117916.taobao.com/?spm=a230r.7195193.1997079397.2.cCDGWb">户外商店</a></li>
+                        <li id="nav_taobao"><a target="_blank" href="https://shop100117916.taobao.com/?spm=a230r.7195193.1997079397.2.cCDGWb">户外商店</a></li>
                     </ul>
                 </div>
                 <!--/navbar collapse-->
