add activity type

--- a/application/admin/view/activity/create.html
+++ b/application/admin/view/activity/create.html
@@ -90,13 +90,21 @@
             <input type="text" class="form-control" id="caption" name="caption" placeholder="标题"/>
         </div>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                 <label for="location">活动地点</label>
                 <input type="text" class="form-control" id="location" name="location" placeholder="活动地点"/>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-5">
                 <label for="gather">集合地点</label>
                 <input type="text" class="form-control" id="gather" name="gather" placeholder="集合地点"/>
+            </div>
+            <div class="col-sm-2">
+                <label for="type">活动类型</label>
+                <select name="type" id="type" class="form-control">
+                    <option value="0">周边</option>
+                    <option value="1">长途</option>
+                    <option value="2">代理</option>
+                </select>
             </div>
         </div>
         <div class="row">
