--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -9,14 +9,35 @@
 
 {block name="content"}
 
-<!---->
 <div class="banner">
-     <div class="container">
-         <div class="banner-grids">
-         </div>
-     </div>
-</div>
-<!---->
+    <div class="container">
+        <div class="banner-grids">
+            <div class="col-md-6 banner-grid grid1">
+                <div class="package">
+                    <h3><a href="/index/activity?type=0">周边</a></h3>
+                    <ul>
+                        <li>浙江</li>
+                        <li>江苏</li>
+                        <li>安徽</li>
+                    </ul>
+                    <span class="glyphicon1 glyphicon-globe" aria-hidden="true"></span>
+                </div>
+            </div>
+            <div class="col-md-6 banner-grid">
+                <div class="package">
+                    <h3><a href="/index/activity?type=3">长途</a></h3>
+                    <ul>
+                        <li>云南</li>
+                        <li>贵州</li>
+                        <li>四川</li>
+                    </ul>
+                    <span class="glyphicon1 glyphicon-plane" aria-hidden="true"></span>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        </div>
+    </div>
 <div class="welcome">
      <div class="container">
          <div class="welcome-grids">
